--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,7 +1,9 @@
 name: Auto commit for previous year
 
 on:
-  workflow_dispatch: # Allows manual triggering of the workflow from the GitHub UI
+  push:
+    branches:
+      - master
 
 jobs:
   auto_commit:
