--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -3,7 +3,8 @@ name: Auto commit for previous year
 on:
   push:
     branches:
-      - main # 
+      - main # Adjust branch name if needed
+
 jobs:
   auto_commit:
     runs-on: ubuntu-latest
@@ -19,6 +20,10 @@ jobs:
         run: |
           git config --local user.email "abhigowda0190@gmail.com"
           git config --local user.name "Abhishek-BG"
+
+      - name: Pull Latest Changes
+        run: |
+          git pull origin main # Adjust branch name if needed
 
       - name: Generate Commits for the Past Year
         run: |
