--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,4 +1,4 @@
-name: Auto commit for previous year
+name: Auto commit for previous years
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
           git config --global user.email "abhigowda0190@gmail.com"
           git config --global user.name "Abhishek-BG"
 
-      - name: Generate Commits for the Past Year
+      - name: Generate Commits for Previous Years
         run: |
           # Array of commit messages
           arr=(
@@ -51,41 +51,36 @@ jobs:
             "Update configs"
           )
 
-          # Number of days to randomly pick
-          days_to_commit=200
-
-          # Create an array of all dates in the past year
-          all_dates=()
-          for i in {365..1}; do
-            all_dates+=("$(date -d "$i days ago" '+%Y-%m-%d')")
-          done
-
-          # Shuffle and pick random days
-          random_days=($(shuf -e "${all_dates[@]}" -n "$days_to_commit"))
-
-          # Iterate over each random day and make a random number of commits
-          for day in "${random_days[@]}"; do
-            # Generate random number of commits for this day (0 to 17)
-            num_commits=$((RANDOM % 18))
-            
-            for ((j = 0; j < num_commits; j++)); do
-              commit_date=$(date -d "$day" '+%Y-%m-%dT%H:%M:%SZ')
-              rand=$((RANDOM % ${#arr[@]}))
-              commit_message="${arr[$rand]} - $commit_date"
-              
-              # Create a file with the commit date
-              echo "$commit_date" > LAST_UPDATED
-
-              # Check if there are changes to commit
-              if git diff --quiet; then
-                echo "No changes to commit for $commit_date"
-              else
-                # Add, commit, and set the commit date
-                git add LAST_UPDATED
-                GIT_COMMITTER_DATE="$commit_date" git commit -m "$commit_message" --date="$commit_date"
-              fi
+          # Function to generate commits for a specific year
+          generate_commits() {
+            year=$1
+            num_days=$2
+            for i in $(seq 365); do
+              all_dates+=("$(date -d "$i days ago" --date="$year-01-01" '+%Y-%m-%d')")
             done
-          done
+            random_days=($(shuf -e "${all_dates[@]}" -n "$num_days"))
+            for day in "${random_days[@]}"; do
+              num_commits=$((RANDOM % 17 + 1))
+              for ((j = 0; j < num_commits; j++)); do
+                commit_date=$(date -d "$day" '+%Y-%m-%dT%H:%M:%SZ')
+                rand=$((RANDOM % ${#arr[@]}))
+                commit_message="${arr[$rand]} - $commit_date"
+                echo "$commit_date" > LAST_UPDATED
+                if git diff --quiet; then
+                  echo "No changes to commit for $commit_date"
+                else
+                  git add LAST_UPDATED
+                  GIT_COMMITTER_DATE="$commit_date" git commit -m "$commit_message" --date="$commit_date"
+                fi
+              done
+            done
+          }
+
+          # Generate commits for each year
+          generate_commits 2019 100
+          generate_commits 2020 170
+          generate_commits 2021 120
+          generate_commits 2022 220
 
       - name: Verify Commits
         run: git log --oneline
