--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -55,10 +55,20 @@ jobs:
           generate_commits() {
             year=$1
             num_days=$2
-            for i in $(seq 365); do
-              all_dates+=("$(date -d "$i days ago" --date="$year-01-01" '+%Y-%m-%d')")
+            all_dates=()
+            start_date=$(date -d "$year-01-01" '+%Y-%m-%d')
+            end_date=$(date -d "$year-12-31" '+%Y-%m-%d')
+
+            # Generate all dates for the specified year
+            while [[ "$start_date" < "$end_date" ]]; do
+              all_dates+=("$start_date")
+              start_date=$(date -d "$start_date + 1 day" '+%Y-%m-%d')
             done
+
+            # Select random days
             random_days=($(shuf -e "${all_dates[@]}" -n "$num_days"))
+            
+            # Make commits for each random day
             for day in "${random_days[@]}"; do
               num_commits=$((RANDOM % 17 + 1))
               for ((j = 0; j < num_commits; j++)); do
@@ -77,10 +87,10 @@ jobs:
           }
 
           # Generate commits for each year
-          generate_commits 2019 100
-          generate_commits 2020 170
-          generate_commits 2021 120
-          generate_commits 2022 220
+          generate_commits 2019 150
+          generate_commits 2020 150
+          generate_commits 2021 150
+          generate_commits 2022 150
 
       - name: Verify Commits
         run: git log --oneline
