--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -1,4 +1,4 @@
-name: Remove Commits from August 2024
+name: Remove Commits from August to December 2024
 
 on:
   workflow_dispatch:
@@ -19,21 +19,16 @@ jobs:
           git config --global user.email "abhigowda0190@gmail.com"
           git config --global user.name "Abhishek-BG"
 
-      - name: Identify and Remove Commits from August 2024
+      - name: Install git-filter-repo
         run: |
-          # Identify commits from August 2024
-          commits_to_remove=$(git log --pretty=format:"%H" --since="2024-08-01" --until="2024-12-31" --author="abhigowda0190@gmail.com")
+          sudo apt-get update
+          sudo apt-get install -y git-filter-repo
 
-          # Check if there are commits to remove
-          if [ -z "$commits_to_remove" ]; then
-            echo "No commits found for August 2024."
-            exit 0
-          fi
-
-          # Remove each commit
-          for commit in $commits_to_remove; do
-            git rebase --onto $(git rev-list --reverse $commit^..HEAD | head -n 1) $commit^
-          done
+      - name: Remove Commits from August to December 2024
+        run: |
+          git filter-repo --commit-callback '
+          if commit.committer_date >= "2024-08-01T00:00:00Z" and commit.committer_date <= "2024-12-31T23:59:59Z":
+              commit.skip()' 
 
       - name: Verify Commits
         run: git log --oneline
