--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -21,19 +21,16 @@ jobs:
           git config --global user.email "abhigowda0190@gmail.com"
           git config --global user.name "Abhishek-BG"
 
-      - name: Install git-filter-repo
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y git-filter-repo
-
       - name: Remove Commits from August to December 2024
         run: |
-          git filter-repo --commit-callback '
-          import datetime
-          commit_date = datetime.datetime.fromtimestamp(commit.committer_date).isoformat()
-          if "2024-08-01T00:00:00" <= commit_date <= "2024-12-31T23:59:59":
-              commit.skip()'
-          
+          # Get all commits from August to December 2024
+          git filter-branch --force --commit-filter '
+          if [ "$(git log -1 --format="%cd" --date=iso | cut -d" " -f1)" \> "2024-07-31" ] && [ "$(git log -1 --format="%cd" --date=iso | cut -d" " -f1)" \< "2025-01-01" ]; then
+              skip
+          else
+              git commit-tree "$@"
+          fi' HEAD
+
       - name: Verify Commits
         run: git log --oneline
 
