--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -21,21 +21,19 @@ jobs:
           git config --global user.email "abhigowda0190@gmail.com"
           git config --global user.name "Abhishek-BG"
 
-      - name: Install git-filter-repo
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y git-filter-repo
-
       - name: Remove Commits from August to December 2024
         run: |
-          git filter-repo --commit-callback '
-          import datetime
-          def commit_callback(commit, aux_info):
-              start_date = datetime.datetime(2024, 8, 1)
-              end_date = datetime.datetime(2024, 12, 31)
-              commit_date = datetime.datetime.fromtimestamp(commit.committer_date)
-              if start_date <= commit_date <= end_date:
-                  commit.skip()' 
+          # Create a backup branch
+          git checkout -b backup-branch
+          git push origin backup-branch
+
+          # Remove commits from August to December 2024
+          git filter-branch --commit-filter '
+            if [ "$(git show -s --format=%ai $GIT_COMMIT)" \> "2024-07-31" ] && [ "$(git show -s --format=%ai $GIT_COMMIT)" \< "2024-12-31" ]; then
+              skip_commit "$@";
+            else
+              git commit-tree "$@";
+            fi' HEAD
 
       - name: Verify Commits
         run: git log --oneline
